# rust-rest-boilerplate

./: Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/server/: mod.rs
src/server/api/: user_controller.rs
src/server/extractors/: required_authentication_extractor.rs  validation_extractor.rs
