[package]
name = "rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.66"
axum = { version = "0.7.4", features = ["tower-log"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
backtrace = "0.3.67"
clap = { version = "4.1.8", features = ["derive","env"] }
dotenvy = "0.15.6"
http-body = "1.0.0"
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
metrics = "0.22.0"
metrics-exporter-prometheus = "0.13.0"
mockall = "0.12.1"
rust-argon2 = "2.1.0"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "time", "offline", "uuid"] }
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout", "buffer", "limit"] }
tower-http = {version="0.5.0", features = ["trace", "cors"]}
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
validator = { version = "0.16.0", features = ["derive"] }
